Add the `!default` flag to all variable definition to allow override

--- a/src/framework/_breakpoints.scss
+++ b/src/framework/_breakpoints.scss
@@ -11,7 +11,7 @@ $breakpoints: (
   'l': 1280,
   'xl': 1440,
   'xxl': 1920,
-);
+) !default;
 
 /*============================================================================*\
    Function helper
