--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,5 @@
    Main entry point
 \*============================================================================*/
 
-
-$has-classes: true;
-@import "framework/index";
+$has-classes: true !default;
+@import 'framework/index';
