Use the sans-serif font-family as default font

--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -393,6 +393,10 @@ $font-sizes: (
 \*============================================================================*/
 
 @if $has-classes {
+  body {
+    font-family: $font-family-sans;
+  }
+
   h1,
   h2,
   h3,
