--- a/src/framework/_layers.scss
+++ b/src/framework/_layers.scss
@@ -17,11 +17,11 @@ $layers: (
  * A function helper to avoid having to type `map-get($layers, ...)`
  * Based on http://css-tricks.com/handling-z-index/
  *
- * @param  {string} $layer The name of the z-index
- * @param  {number} $var   The modifier if needed
- * @return {number}        The corresponding z-index based on the $layers var
+ * @param  {string} $layer    The name of the z-index
+ * @param  {number} $modifier The modifier if needed
+ * @return {number}           The corresponding z-index based on the $layers var
  */
-@function z($layer, $var: 0) {
+@function layer($layer, $modifier: 0) {
   @if not map-has-key($layers, $layer) {
     @warn 'No z-index found in $layers map for `#{$layer}`. Property omitted.';
     @return 'initial';
@@ -29,4 +29,21 @@ $layers: (
 
   $value: map-get($layers, $layer);
   @return $value + $var;
+}
+
+/**
+ * Alias for the `layer($layer, $modifier)` function above
+ */
+@function l($layer, $modifier: 0) {
+  @return layer($layer, $modifier);
+}
+
+/**
+ * Deprecated alias for the `layer($layer, $modifier)` function
+ */
+@function z($layer, $modifier: 0) {
+  @warn 'The `z($layer, $modifier)` function is deprecated.';
+  @warn 'Use `l($layer, $modifier)` instead.';
+
+  @return l($layer, $modifier);
 }
