--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -78,7 +78,7 @@ $font-sizes: (
  * @param  {number} $var   The modifier if needed
  * @return {number}        The corresponding z-index based on the $layers var
  */
-@function fz($font-size, $unit: 'em') {
+@function font-size($font-size, $unit: 'em') {
   @if not map-has-key($font-sizes, $font-size) {
     @error 'No font-size found in $fonti-sizes map for `#{$font-size}`.';
   }
@@ -101,11 +101,18 @@ $font-sizes: (
 }
 
 /**
+ * Alias for the `font-size($font-size, $unit)` function above
+ */
+@function fz($font-size, $unit: 'em') {
+  @return font-size($font-size, $unit);
+}
+
+/**
  * A function helper to get the computed line-height of the given font-size
  * @param  {string} $font-size The name of the font-size
  * @return {string}            The corresponding line-height
  */
-@function lh($font-size) {
+@function line-height($font-size) {
   @if not map-has-key($font-sizes, $font-size) {
     @error 'No font-size found in $fonti-sizes map for `#{$font-size}`.';
   }
@@ -123,14 +130,28 @@ $font-sizes: (
 }
 
 /**
+ * Alias for the `line-height($font-size)` function above
+ */
+@function lh($font-size) {
+  @return line-height($font-size);
+}
+
+/**
  * A mixin to get both font-size and line-height given a named font-size
  * @param  {string} $font-size The font-size name
  * @param  {string} $unit      The unit for the font-size value
  * @return {string}            The `font-size` and `line-height` declarations
  */
-@mixin fz($font-size, $unit: 'em') {
+@mixin font-size($font-size, $unit: 'em') {
   font-size: fz($font-size, $unit);
   line-height: lh($font-size);
+}
+
+/**
+ * Alias for the `font-size($font-size, $unit)` mixin defined above
+ */
+@mixin fz($font-size, $unit: 'em') {
+  @include font-size($font-size, $unit);
 }
 
 /*============================================================================*\
