--- a/src/framework/_displays.scss
+++ b/src/framework/_displays.scss
@@ -27,43 +27,43 @@
 \*============================================================================*/
 
 @if $has-classes {
-  .hidden {
+  .display-none {
     display: none;
   }
 
-  .hidden--force {
+  .display-none--force {
     display: none !important;
   }
 
-  .visible-block {
+  .display-block {
     display: block;
   }
 
-  .visible-block--force {
+  .display-block--force {
     display: block !important;
   }
 
-  .visible-flex {
+  .display-flex {
     display: flex;
   }
 
-  .visible-flex--force {
+  .display-flex--force {
     display: flex !important;
   }
 
-  .visible-inline {
+  .display-inline {
     display: inline;
   }
 
-  .visible-inline--force {
+  .display-inline--force {
     display: inline !important;
   }
 
-  .visible-inline-block {
+  .display-inline-block {
     display: inline-block;
   }
 
-  .visible-inline-block--force {
+  .display-inline-block--force {
     display: inline-block !important;
   }
 
@@ -79,48 +79,48 @@
     $key: nth($breakpoint, 1);
 
     @media #{md($key)} {
-      .hidden--#{$key} {
+      .display-none--#{$key} {
         display: none;
       }
 
-      .hidden--force-#{$key} {
+      .display-none--force-#{$key} {
         display: none !important;
+      }
+
+      .display-block--#{$key} {
+        display: block;
+      }
+
+      .display-block--force-#{$key} {
+        display: block !important;
+      }
+
+      .display-flex--#{$key} {
+        display: flex;
+      }
+
+      .display-flex--force-#{$key} {
+        display: flex !important;
+      }
+
+      .display-inline--#{$key} {
+        display: inline;
+      }
+
+      .display-inline--force-#{$key} {
+        display: inline !important;
+      }
+
+      .display-inline-block--#{$key} {
+        display: inline-block;
+      }
+
+      .display-inline-block--force-#{$key} {
+        display: inline-block !important;
       }
 
       .hidden-accessible--#{$key} {
         @include hidden-accessible();
-      }
-
-      .visible-block--#{$key} {
-        display: block;
-      }
-
-      .visible-block--force-#{$key} {
-        display: block !important;
-      }
-
-      .visible-flex--#{$key} {
-        display: flex;
-      }
-
-      .visible-flex--force-#{$key} {
-        display: flex !important;
-      }
-
-      .visible-inline--#{$key} {
-        display: inline;
-      }
-
-      .visible-inline--force-#{$key} {
-        display: inline !important;
-      }
-
-      .visible-inline-block--#{$key} {
-        display: inline-block;
-      }
-
-      .visible-inline-block--force-#{$key} {
-        display: inline-block !important;
       }
     }
   }
