--- a/src/framework/_displays.scss
+++ b/src/framework/_displays.scss
@@ -11,7 +11,7 @@
  *
  * @author Facebook Accessibility Team
  */
-@mixin hidden-accessible {
+@mixin display-hidden-accessible {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -66,7 +66,7 @@
     display: inline-block !important;
   }
 
-  .hidden-accessible {
+  .display-hidden-accessible {
     @include hidden-accessible();
   }
 
@@ -118,7 +118,7 @@
         display: inline-block !important;
       }
 
-      .hidden-accessible--#{$key} {
+      .display-hidden-accessible--#{$key} {
         @include hidden-accessible();
       }
     }
