Add documentation on spaces and typography

--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -310,12 +310,24 @@ $font-sizes: (
 \*============================================================================*/
 
 @if $has-classes {
+  .type-thin {
+    font-weight: 100;
+  }
+
+  .type-extralight {
+    font-weight: 200;
+  }
+
   .type-light {
     font-weight: 300;
   }
 
   .type-regular {
     font-weight: 400;
+  }
+
+  .type-medium {
+    font-weight: 500;
   }
 
   .type-semibold {
@@ -330,6 +342,10 @@ $font-sizes: (
     font-weight: 800;
   }
 
+  .type-black {
+    font-weight: 900;
+  }
+
   /**
    * Generate helpers for each defined breakpoints
    */
@@ -337,12 +353,24 @@ $font-sizes: (
     $breakpoint: nth($breakpoint, 1);
 
     @media #{md($breakpoint)} {
+      .type-thin--#{$breakpoint} {
+        font-weight: 100;
+      }
+
+      .type-extralight--#{$breakpoint} {
+        font-weight: 200;
+      }
+
       .type-light--#{$breakpoint} {
         font-weight: 300;
       }
 
       .type-regular--#{$breakpoint} {
         font-weight: 400;
+      }
+
+      .type-medium--#{$breakpoint} {
+        font-weight: 500;
       }
 
       .type-semibold--#{$breakpoint} {
@@ -356,6 +384,10 @@ $font-sizes: (
       .type-extrabold--#{$breakpoint} {
         font-weight: 800;
       }
+
+      .type-black--#{$breakpoint} {
+        font-weight: 900;
+      }
     }
   }
 }
@@ -365,8 +397,45 @@ $font-sizes: (
 \*============================================================================*/
 
 @if $has-classes {
-  .type-spacing--200 {
-    letter-spacing: 0.285ch;
+  .type-spacing-25 {
+    letter-spacing: 0.025em;
+  }
+
+  .type-spacing-50 {
+    letter-spacing: 0.05em;
+  }
+
+  .type-spacing-100 {
+    letter-spacing: 0.1em;
+  }
+
+  .type-spacing-200 {
+    letter-spacing: 0.2em;
+  }
+
+  /**
+   * Generate helpers for each defined breakpoints
+   */
+  @each $breakpoint in $breakpoints {
+    $breakpoint: nth($breakpoint, 1);
+
+    @media #{md($breakpoint)} {
+      .type-spacing-25--#{$breakoint} {
+        letter-spacing: 0.025em;
+      }
+
+      .type-spacing-50--#{$breakoint} {
+        letter-spacing: 0.05em;
+      }
+
+      .type-spacing-100--#{$breakoint} {
+        letter-spacing: 0.1em;
+      }
+
+      .type-spacing-200--#{$breakoint} {
+        letter-spacing: 0.2em;
+      }
+    }
   }
 }
 
@@ -379,12 +448,20 @@ $font-sizes: (
     text-transform: uppercase;
   }
 
+  .type-lowercase {
+    text-transform: lowercase;
+  }
+
   .type-capitalize {
     text-transform: capitalize;
   }
 
   .type-no-underline {
     text-decoration: none;
+  }
+
+  .type-underline {
+    text-decoration: underline;
   }
 }
 
