--- a/src/components/grid.scss
+++ b/src/components/grid.scss
@@ -19,8 +19,6 @@
  *
  * When nesting grid, you'll need to add the `.grid--nested` modifier to the
  * block element.
- *
- * See https://codepen.io/titouanmathis/full/Bpjoew for more examples.
  */
 
 // Import dependencies
@@ -28,9 +26,9 @@
 @import '../framework/spaces';
 
 // Local variables
-$grid-columns: 12;
-$grid-gutter: space('x6'); // 48px converted in em
-$grid-breakpoints: $breakpoints;
+$grid-columns: 12 !default;
+$grid-gutter: space('x6') !default;
+$grid-breakpoints: $breakpoints !default;
 
 /*============================================================================*\
    Grid block
@@ -49,6 +47,48 @@ $grid-breakpoints: $breakpoints;
     @media #{md($key)} {
       padding-right: $grid-gutter * 0.5;
       padding-left: $grid-gutter * 0.5;
+    }
+  }
+}
+
+/* No gutter modifier
+\*============================================================================*/
+
+.grid--no-gutter {
+  padding-right: 0;
+  padding-left: 0;
+
+  // Media queries
+  @each $grid-breakpoint in $grid-breakpoints {
+    $key: nth($grid-breakpoint, 1);
+
+    @media #{md($key)} {
+      padding-right: 0;
+      padding-left: 0;
+    }
+  }
+}
+
+/* Nested grid modifier
+\*============================================================================*/
+
+/**
+ * Nested grid must not have left and right paddings to avoid weird alignment
+ * when nesting multiple times. The nested grid is different from the
+ * "no-gutter" one by only resetting the padding on the grid block, and not on
+ * its row or columns.
+ */
+.grid--nested {
+  padding-right: 0;
+  padding-left: 0;
+
+  // Media queries
+  @each $grid-breakpoint in $grid-breakpoints {
+    $key: nth($grid-breakpoint, 1);
+
+    @media #{md($key)} {
+      padding-right: 0;
+      padding-left: 0;
     }
   }
 }
@@ -74,11 +114,16 @@ $grid-breakpoints: $breakpoints;
     @media #{md($key)} {
       margin-right: $grid-gutter * -0.5;
       margin-left: $grid-gutter * -0.5;
+
+      .grid--no-gutter > & {
+        margin-right: 0;
+        margin-left: 0;
+      }
     }
   }
 }
 
-/* Row modifiers
+/* Row flex modifiers
 \*============================================================================*/
 
 .grid__row--end,
@@ -87,11 +132,10 @@ $grid-breakpoints: $breakpoints;
   display: flex;
   flex-wrap: wrap;
 
-  // Loop over breakpoints
+  // Media queries
   @each $grid-breakpoint in $grid-breakpoints {
     $key: nth($grid-breakpoint, 1);
 
-    // Media queries
     @media #{md($key)} {
       .grid__col-left--#{$key} {
         order: 0;
@@ -120,9 +164,13 @@ $grid-breakpoints: $breakpoints;
    Columns elements
 \*============================================================================*/
 
-.grid,
 [class*='grid__col-'] {
   min-height: 1px;
+
+  .grid__row--stretch > & {
+    display: flex;
+    align-items: stretch;
+  }
 
   // Media queries
   @each $grid-breakpoint in $grid-breakpoints {
@@ -131,34 +179,25 @@ $grid-breakpoints: $breakpoints;
     @media #{md($key)} {
       padding-right: $grid-gutter * 0.5;
       padding-left: $grid-gutter * 0.5;
+
+      .grid--no-gutter > .grid__row > & {
+        padding-right: 0;
+        padding-left: 0;
+      }
     }
   }
 }
 
-[class*='grid__col-'] {
-  .grid__row--stretch > & {
-    display: flex;
-    align-items: stretch;
-  }
-}
-
-// Generates the columns class for
-// each breakpoints defined
+// Generates the columns class for each breakpoints defined
 @each $grid-breakpoint in $grid-breakpoints {
   $key: nth($grid-breakpoint, 1);
 
   // Media queries
-  // We need the `all` specification to prevent
-  // the cleanCSS Gulp plugin to merge these
-  // media queries with others and screw the
-  // order, which is important in this case
   @media #{md($key)} {
-    // sass-lint:disable force-attribute-nesting
     [class*='grid__col-'][class*='--#{$key}'] {
       float: left;
       display: block;
     }
-    // sass-lint:enable force-attribute-nesting
 
     .grid__col-center--#{$key} {
       float: none;
@@ -205,36 +244,6 @@ $grid-breakpoints: $breakpoints;
       .grid__push-#{$i}--#{$key} {
         margin-left: $i * 100% / $grid-columns;
       }
-    }
-  }
-}
-
-.grid__col-center {
-  float: none;
-  clear: both;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Grid block modifiers
- * NOTE At the end to respect the cascade and be more specific
-\*============================================================================*/
-
-/**
- * Nested grid must not have left and right paddings
- * to avoid weird alignment when nesting multiple times.
- */
-.grid--nested {
-  padding-right: 0;
-  padding-left: 0;
-
-  // Media queries
-  @each $grid-breakpoint in $grid-breakpoints {
-    $key: nth($grid-breakpoint, 1);
-
-    @media #{md($key)} {
-      padding-right: 0;
-      padding-left: 0;
     }
   }
 }
