--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -115,7 +115,7 @@ $font-sizes: (
  */
 @function line-height($font-size) {
   @if not map-has-key($font-sizes, $font-size) {
-    @error 'No font-size found in $fonti-sizes map for `#{$font-size}`.';
+    @error 'No font-size found in $font-sizes map for `#{$font-size}`.';
   }
 
   $values: map-get($font-sizes, $font-size);
@@ -331,42 +331,13 @@ $font-sizes: (
 /*============================================================================*\
    Type font weight helpers
 \*============================================================================*/
+$font-weights: (300, 500, 800) !default;
 
 @if $has-classes {
-  .type-thin {
-    font-weight: 100;
-  }
-
-  .type-extralight {
-    font-weight: 200;
-  }
-
-  .type-light {
-    font-weight: 300;
-  }
-
-  .type-regular {
-    font-weight: 400;
-  }
-
-  .type-medium {
-    font-weight: 500;
-  }
-
-  .type-semibold {
-    font-weight: 600;
-  }
-
-  .type-bold {
-    font-weight: 700;
-  }
-
-  .type-extrabold {
-    font-weight: 800;
-  }
-
-  .type-black {
-    font-weight: 900;
+  @each $font-weight in $font-weights {
+    .type-weight-#{$font-weight} {
+      font-weight: $font-weight;
+    }
   }
 
   /**
@@ -375,41 +346,11 @@ $font-sizes: (
   @each $breakpoint in $breakpoints {
     $breakpoint: nth($breakpoint, 1);
 
-    @media #{md($breakpoint)} {
-      .type-thin--#{$breakpoint} {
-        font-weight: 100;
-      }
-
-      .type-extralight--#{$breakpoint} {
-        font-weight: 200;
-      }
-
-      .type-light--#{$breakpoint} {
-        font-weight: 300;
-      }
-
-      .type-regular--#{$breakpoint} {
-        font-weight: 400;
-      }
-
-      .type-medium--#{$breakpoint} {
-        font-weight: 500;
-      }
-
-      .type-semibold--#{$breakpoint} {
-        font-weight: 600;
-      }
-
-      .type-bold--#{$breakpoint} {
-        font-weight: 700;
-      }
-
-      .type-extrabold--#{$breakpoint} {
-        font-weight: 800;
-      }
-
-      .type-black--#{$breakpoint} {
-        font-weight: 900;
+    @media all and #{md($breakpoint)} {
+      @each $font-weight in $font-weights {
+        .type-weight-#{$font-weight}--#{$breakpoint} {
+          font-weight: $font-weight;
+        }
       }
     }
   }
