--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -3,28 +3,70 @@
 \*============================================================================*/
 
 $has-classes: false !default;
-$font-dir: '/source/fonts/' !default;
-$font-name-serif: Georgia !default;
-$font-name-sans: Arial !default;
-$font-family-serif: $font-name-serif, serif !default;
-$font-family-sans: $font-name-sans, sans-serif !default;
-$font-display: auto !default;
 
-$font-faces: (
-  $font-name-serif 'type-serif-regular' 400 normal,
-  $font-name-sans 'type-sans-regular' 400 normal
-) !default;
+/*============================================================================*\
+   Typography mixins
+\*============================================================================*/
 
 /**
- * A map to define all font-sizes and their corresponding line-heights, the
+ * Responsive typograhy
+ * @author Mike Riethmuller http://codepen.io/MadeByMike/pen/YPJJYv
+ *
+ * @param  {integer} $min-width The minimum breakpoint
+ * @param  {integer} $max-width The maximum breakpoint
+ * @param  {integer} $min-size  The minimum font-size
+ * @param  {integer} $max-size  The maximum font-size
+ */
+@mixin responsive-type(
+  $min-width: 0,
+  $max-width: 2560,
+  $min-size: 12,
+  $max-size: 16
+) {
+  // Set min size
+  font-size: $min-size * 1px;
+
+  // Adjust size between `$min-width` et `$max-width`
+  @media (min-width: #{$min-width}px) and (max-width: #{$max-width}px) {
+    font-size: calc(
+      #{$min-size}px + (#{$max-size} - #{$min-size}) *
+        ((100vw - #{$min-width}px) / (#{$max-width} - #{$min-width}))
+    );
+  }
+
+  // Set max size
+  @media (min-width: #{$max-width}px) {
+    font-size: #{$max-size}px;
+  }
+}
+
+/**
+ * Antialiasing for better font rendering
+ */
+@mixin type-antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@if $has-classes {
+  html,
+  input,
+  button,
+  .type-antialiased {
+    @include type-antialiased;
+  }
+}
+
+/**
+ * A map to define all type-sizes and their corresponding line-heights, the
  * first value is the font-size, the seconde the line-height.
  *
- * The `fz($font-size, $unit)` and the `lh($font-size)` functions below can be
+ * The `fz($type-size, $unit)` and the `lh($type-size)` functions below can be
  * used to get easily one of the two values.
  *
  * @type {Map}
  */
-$font-sizes: (
+$type-sizes: (
   'display-3': (
     44px,
     66px,
@@ -68,7 +110,7 @@ $font-sizes: (
 ) !default;
 
 /*============================================================================*\
-   Font-sizes helper function
+   Type sizes helper functions and mixins
 \*============================================================================*/
 
 /**
@@ -79,158 +121,80 @@ $font-sizes: (
  * @param  {number} $var   The modifier if needed
  * @return {number}        The corresponding z-index based on the $layers var
  */
-@function font-size($font-size, $unit: 'em') {
-  @if not map-has-key($font-sizes, $font-size) {
-    @error 'No font-size found in $fonti-sizes map for `#{$font-size}`.';
+@function font-size($type-size, $unit: 'em') {
+  @if not map-has-key($type-sizes, $type-size) {
+    @error 'No font-size found in $fonti-sizes map for `#{$type-size}`.';
   }
 
   $root-font-size: 16px;
-  $values: map-get($font-sizes, $font-size);
+  $values: map-get($type-sizes, $type-size);
 
   // First value is the font-size
-  $font-size: nth($values, 1);
+  $type-size: nth($values, 1);
 
   // Second value is the line-height, we divide it by the font-size to get
   // a line-height without unit, which is a best practice.
-  $line-height: nth($values, 2) / $font-size;
+  $line-height: nth($values, 2) / $type-size;
 
   @if $unit == 'px' {
-    @return $font-size;
+    @return $type-size;
   } @else {
-    @return #{$font-size / $root-font-size + $unit};
+    @return #{$type-size / $root-font-size + $unit};
   }
 }
 
 /**
- * Alias for the `font-size($font-size, $unit)` function above
+ * Alias for the `font-size($type-size, $unit)` function above
  */
-@function fz($font-size, $unit: 'em') {
-  @return font-size($font-size, $unit);
+@function fz($type-size, $unit: 'em') {
+  @return font-size($type-size, $unit);
 }
 
 /**
  * A function helper to get the computed line-height of the given font-size
- * @param  {string} $font-size The name of the font-size
+ * @param  {string} $type-size The name of the font-size
  * @return {string}            The corresponding line-height
  */
-@function line-height($font-size) {
-  @if not map-has-key($font-sizes, $font-size) {
-    @error 'No font-size found in $font-sizes map for `#{$font-size}`.';
+@function line-height($type-size) {
+  @if not map-has-key($type-sizes, $type-size) {
+    @error 'No font-size found in $type-sizes map for `#{$type-size}`.';
   }
 
-  $values: map-get($font-sizes, $font-size);
+  $values: map-get($type-sizes, $type-size);
 
   // First value is the font-size
-  $font-size: nth($values, 1);
+  $type-size: nth($values, 1);
 
   // Second value is the line-height, we divide it by the font-size to get
   // a line-height without unit, which is a best practice.
-  $line-height: nth($values, 2) / $font-size;
+  $line-height: nth($values, 2) / $type-size;
 
   @return $line-height;
 }
 
 /**
- * Alias for the `line-height($font-size)` function above
+ * Alias for the `line-height($type-size)` function above
  */
-@function lh($font-size) {
-  @return line-height($font-size);
+@function lh($type-size) {
+  @return line-height($type-size);
 }
 
 /**
  * A mixin to get both font-size and line-height given a named font-size
- * @param  {string} $font-size The font-size name
+ * @param  {string} $type-size The font-size name
  * @param  {string} $unit      The unit for the font-size value
  * @return {string}            The `font-size` and `line-height` declarations
  */
-@mixin font-size($font-size, $unit: 'em') {
-  font-size: fz($font-size, $unit);
-  line-height: lh($font-size);
+@mixin font-size($type-size, $unit: 'em') {
+  font-size: fz($type-size, $unit);
+  line-height: lh($type-size);
 }
 
 /**
- * Alias for the `font-size($font-size, $unit)` mixin defined above
+ * Alias for the `font-size($type-size, $unit)` mixin defined above
  */
-@mixin fz($font-size, $unit: 'em') {
-  @include font-size($font-size, $unit);
-}
-
-/*============================================================================*\
-   Fontaces declarations
-\*============================================================================*/
-@if $has-classes {
-  @each $font-face in $font-faces {
-    $name: nth($font-face, 1);
-    $file: nth($font-face, 2);
-    $weight: nth($font-face, 3);
-    $style: nth($font-face, 4);
-
-    @font-face {
-      font-family: $name;
-      src: url('#{$font-dir + $file}.woff2') format('woff2'),
-        url('#{$font-dir + $file}.woff') format('woff');
-      font-weight: $weight;
-      font-style: $style;
-      font-display: $font-display;
-    }
-  }
-}
-
-/*============================================================================*\
-   Responsive type mixin
-\*============================================================================*/
-
-/**
- * Responsive typograhy
- * @author Mike Riethmuller http://codepen.io/MadeByMike/pen/YPJJYv
- * @param  {integer} $min-width The minimum breakpoint
- * @param  {integer} $max-width The maximum breakpoint
- * @param  {integer} $min-size  The minimum font-size
- * @param  {integer} $max-size  The maximum font-size
- * @return {void}
- */
-@mixin responsive-type(
-  $min-width: 0,
-  $max-width: 2560,
-  $min-size: 12,
-  $max-size: 16
-) {
-  // Set min size
-  font-size: $min-size * 1px;
-
-  // Adjust size between `$min-width` et `$max-width`
-  @media (min-width: #{$min-width}px) and (max-width: #{$max-width}px) {
-    font-size: calc(
-      #{$min-size}px + (#{$max-size} - #{$min-size}) *
-        ((100vw - #{$min-width}px) / (#{$max-width} - #{$min-width}))
-    );
-  }
-
-  // Set max size
-  @media (min-width: #{$max-width}px) {
-    font-size: #{$max-size}px;
-  }
-}
-
-/*============================================================================*\
-   Antialiasing mixin
-\*============================================================================*/
-
-/**
- * Antialiasing for better font rendering
- */
-@mixin type-antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-@if $has-classes {
-  html,
-  input,
-  button,
-  .type-antialiased {
-    @include type-antialiased;
-  }
+@mixin fz($type-size, $unit: 'em') {
+  @include font-size($type-size, $unit);
 }
 
 /*============================================================================*\
@@ -238,8 +202,8 @@ $font-sizes: (
 \*============================================================================*/
 
 @if $has-classes {
-  @each $font-size in $font-sizes {
-    $key: nth($font-size, 1);
+  @each $type-size in $type-sizes {
+    $key: nth($type-size, 1);
 
     .type-#{$key} {
       @include fz($key);
@@ -252,8 +216,8 @@ $font-sizes: (
 
   // Media queries
   @include for-each-breakpoints using ($breakpoint) {
-    @each $font-size in $font-sizes {
-      $size: nth($font-size, 1);
+    @each $type-size in $type-sizes {
+      $size: nth($type-size, 1);
 
       .type-#{$size}--#{$breakpoint} {
         @include fz($size);
@@ -267,51 +231,115 @@ $font-sizes: (
 }
 
 /*============================================================================*\
-   Type alignement helpers
+   Type font families helpers
 \*============================================================================*/
 
+$type-webfont-dir: '/source/fonts/' !default;
+$type-webfont-display: auto !default;
+
+$type-fonts: (
+  serif: (
+    name: Georgia,
+    stack: 'Georgia, serif',
+    webfonts: (
+      (
+        filename: 'georgia-regular',
+        weight: 400,
+        style: normal,
+      ),
+      (
+        filename: 'georgia-italic',
+        weight: 400,
+        style: italic,
+      ),
+      (
+        filename: 'georgia-bold',
+        weight: 700,
+        style: normal,
+      ),
+      (
+        filename: 'georgia-bold-italic',
+        weight: 700,
+        style: italic,
+      ),
+    ),
+  ),
+  sans-serif: (
+    name: Arial,
+    stack: 'Arial, sans-serif',
+    webfonts: (
+      (
+        filename: 'arial-regular',
+        weight: 400,
+        style: normal,
+      ),
+      (
+        filename: 'arial-italic',
+        weight: 400,
+        style: italic,
+      ),
+      (
+        filename: 'arial-bold',
+        weight: 700,
+        style: normal,
+      ),
+      (
+        filename: 'arial-bold-italic',
+        weight: 700,
+        style: italic,
+      ),
+    ),
+  ),
+) !default;
+
 @if $has-classes {
-  .type-center {
-    text-align: center;
-  }
+  @each $font in $type-fonts {
+    $key: nth($font, 1);
+    $font: map-get($type-fonts, $key);
+    $name: map-get($font, 'name');
+    $stack: map-get($font, 'stack');
+    $webfonts: map-get($font, 'webfonts');
 
-  .type-left {
-    text-align: left;
-  }
-
-  .type-right {
-    text-align: right;
-  }
-
-  /**
-   * Generate helpers for each defined breakpoints
-   */
-  @include for-each-breakpoints using ($breakpoint) {
-    .type-center--#{$breakpoint} {
-      text-align: center;
+    .type-#{$key} {
+      font-family: unquote($stack);
     }
 
-    .type-left--#{$breakpoint} {
-      text-align: left;
-    }
+    @each $webfont in $webfonts {
+      $file: map-get($webfont, 'filename');
+      $weight: map-get($webfont, 'weight');
+      $style: map-get($webfont, 'style');
 
-    .type-right--#{$breakpoint} {
-      text-align: right;
+      @font-face {
+        font-family: $name;
+        src: url('#{$type-webfont-dir + $file}.woff2') format('woff2'),
+          url('#{$type-webfont-dir + $file}.woff') format('woff');
+        font-weight: $weight;
+        font-style: $style;
+        font-display: $type-webfont-display;
+      }
     }
   }
 }
 
 /*============================================================================*\
-   Type font families helpers
+   Type alignement helpers
 \*============================================================================*/
 
+$type-alignments: (left, center, right) !default;
+
 @if $has-classes {
-  .type-serif {
-    font-family: $font-family-serif;
+  @each $alignment in $type-alignments {
+    .type-align-#{$alignment} {
+      text-align: #{$alignment};
+    }
   }
 
-  .type-sans {
-    font-family: $font-family-sans;
+  @include for-each-breakpoints using ($breakpoint) {
+    @each $alignment in $type-alignments {
+      .type-align-#{$alignment}--#{$breakpoint} {
+        text-align: #{$alignment};
+      }
+    }
   }
 }
 
@@ -319,12 +347,12 @@ $font-sizes: (
    Type font weight helpers
 \*============================================================================*/
 
-$font-weights: (300, 400, 700) !default;
+$type-weights: (300, 400, 700) !default;
 
 @if $has-classes {
-  @each $font-weight in $font-weights {
-    .type-weight-#{$font-weight} {
-      font-weight: $font-weight;
+  @each $weight in $type-weights {
+    .type-weight-#{$weight} {
+      font-weight: $weight;
     }
   }
 
@@ -332,9 +360,9 @@ $font-weights: (300, 400, 700) !default;
    * Generate helpers for each defined breakpoints
    */
   @include for-each-breakpoints using ($breakpoint) {
-    @each $font-weight in $font-weights {
-      .type-weight-#{$font-weight}--#{$breakpoint} {
-        font-weight: $font-weight;
+    @each $weight in $type-weights {
+      .type-weight-#{$weight}--#{$breakpoint} {
+        font-weight: $weight;
       }
     }
   }
@@ -373,34 +401,26 @@ $type-spacings: (25, 50, 100, 200) !default;
    Type transform
 \*============================================================================*/
 
+$type-transforms: (uppercase, lowercase, capitalize) !default;
+
 @if $has-classes {
-  .type-uppercase {
-    text-transform: uppercase;
-  }
-
-  .type-lowercase {
-    text-transform: lowercase;
-  }
-
-  .type-capitalize {
-    text-transform: capitalize;
-  }
-
-  .type-no-underline {
-    text-decoration: none;
-  }
-
-  .type-underline {
-    text-decoration: underline;
+  @each $transform in $type-transforms {
+    .type-transform-#{$transform} {
+      text-transform: #{$transform};
+    }
   }
 }
 
 /*============================================================================*\
-   Type font defaults
+   Type decoration
 \*============================================================================*/
 
+$type-decorations: (none, underline) !default;
+
 @if $has-classes {
-  a {
-    color: inherit;
+  @each $decoration in $type-decorations {
+    .type-decoration-#{$decoration} {
+      text-decoration: #{$decoration};
+    }
   }
 }
