Cleanup some obsolte  stuff

--- a/src/framework/_layers.scss
+++ b/src/framework/_layers.scss
@@ -5,14 +5,14 @@
 $has-classes: false !default;
 
 $layers: (
-  'goku': 9000,
-  'modal': 6000,
-  'sticky': 2000,
-  'menu': 300,
-  'tooltip': 200,
-  'dropdown': 100,
-  'default': 1,
-  'limbo': -999,
+  goku: 9000,
+  modal: 6000,
+  sticky: 2000,
+  menu: 300,
+  tooltip: 200,
+  dropdown: 100,
+  default: 1,
+  limbo: -999,
 ) !default;
 
 /*============================================================================*\
